chore: add pull request to main trigger for github pages action

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -9,6 +9,9 @@ on:
     paths:
       - 'docs/**'
       - '.github/workflows/jekyll-gh-pages.yml'
+  pull_request:
+    branches:
+      - main
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
