--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -5,7 +5,11 @@ rewrite.rules = [SortImports]
 newlines.source = keep
 maxColumn = 100
 align.multiline = false
-indent.caseSite = 4
+
+indent {
+  main = 4
+  caseSite = 4
+}
 
 docstrings {
   style = SpaceAsterisk                       
