--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -5,6 +5,7 @@ rewrite.rules = [SortImports]
 newlines.source = keep
 maxColumn = 100
 align.multiline = false
+lineEndings = crlf
 
 indent {
   main = 4
