style: styling codes

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -5,7 +5,7 @@ rewrite.rules = [SortImports]
 newlines.source = keep
 maxColumn = 100
 align.multiline = false
-lineEndings = crlf
+lineEndings = windows
 
 indent {
   main = 4
